# ai_weather

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/: cli.py  mcp_server.py  mkdocs.yml  settings.py
src/commands/: __init__.py  check_weather.py  forecast.py
src/core/: aws.py
src/docs/: forecast_0.md  forecast_1.md  forecast_2.md  forecast_3.md  forecast_4.md  index.md
src/env/local/: .env
src/modules/weather/: main.py  models.py  prompts.py  tools.py
tests/: __init__.py
tests/modules/: __init__.py
tests/modules/weather/: __init__.py  test_models.py  test_tools.py
