[project]
name = "weather"
version = "0.1.0"
description = ""
authors = [
    {name = "Gonzalo Ayuso",email = "gonzalo123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents (>=0.3.0,<0.4.0)",
    "strands-agents-tools (>=0.1.9,<0.2.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "mkdocs-material (>=9.6.15,<10.0.0)",
    "mdx-include (>=1.4.2,<2.0.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "mkdocs-charts-plugin (>=0.0.12,<0.0.13)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

